<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <!--  Android Things  -->
    <string name="app_name">Sprinter</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>

    <!--  Login Things  -->
    <string name="msg_hello_welcome">Hello! Welcome To Sprinter.</string>
    <string name="lbl_login">       LOGIN</string>
    <string name="header_login">Login to Track your Runs</string>
    <string name="header_sign_up">Sign Up to Track your Runs</string>
    <string name="lbl_sign_up">SIGN - UP</string>
    <string name="lbl_back">Back</string>
    <string name="form_lbl_name">Name</string>
    <string name="form_lbl_email">E-Mail</string>
    <string name="form_lbl_password">Password</string>

    <!--  Metrics Fragment  -->
    <string name="metrics_title">Let\'s set up your metrics!</string>
    <string name="height">Height: </string>
    <string name="height_unit">inches</string>
    <string name="weight">Weight: </string>
    <string name="weight_unit">lbs</string>
    <string name="age">Age: </string>
    <string name="gender">Gender: </string>
    <string-array name="gender_options">
        <item>female</item>
        <item>male</item>
        <item>other</item>
    </string-array>
    <string name="metrics_continue">Finish</string>

    <!-- Settings Fragment -->
    <string name="settings_title">Settings</string>
    <string name="settings_metrics">1. Metrics</string>
    <string name="settings_set_goals">2. Set Goals</string>
    <string name="settings_delete_account">3. Delete Account</string>
    <string name="settings_past_routes">4. Past Routes</string>
    <string name="settings_logout">5. Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Start Run Fragment  -->
    <string name="start_run_START_RUN">START\nRUN!</string>

    <!--  Running Fragment  -->
    <string name="running_END_RUN">END\nRUN!</string>
    <string name="running_title">GREAT JOB!</string>

    <!--  Summary Fragment  -->
    <string name="summary_title">SUMMARY!</string>
    <string name="summary_distance">Distance: </string>
    <string name="summary_time">Time: </string>
</resources>