<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment"
    >
    <LinearLayout android:id="@+id/linearLoginPage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_orange_300">

        <TextView
            android:id="@+id/txtHelloWelcome"
            style="@style/txtPlayfairDisplayromanbold36"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_marginEnd="@dimen/_36pxh"
            android:gravity="start"
            android:text="@string/metrics_title"
            tools:text="@string/metrics_title" />

        <!-- Height -->
        <TextView
            android:id="@+id/statusMessage"
            style="@style/txtPlayfairDisplayromansemibold20"
            android:layout_width="@dimen/_200pxh"
            android:layout_height="wrap_content"
            android:layout_marginTop = "@dimen/_10pxv"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="Empty Status"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/heightLabel"
                style="@style/txtPlayfairDisplayromansemibold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:text="@string/height" />

            <EditText
                android:id="@+id/heightField"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/heightLabel2"
                style="@style/txtPlayfairDisplayromansemibold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_weight="1"
                android:text="@string/height_unit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/heightLabel3"
                style="@style/txtPlayfairDisplayromansemibold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_weight="1"
                android:text="@string/weight" />

            <EditText
                android:id="@+id/weightField"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/heightLabel4"
                style="@style/txtPlayfairDisplayromansemibold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_weight="1"
                android:text="@string/weight_unit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordLabel"
                style="@style/txtPlayfairDisplayromansemibold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:text="@string/age" />

            <EditText
                android:id="@+id/ageField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordLabel2"
                style="@style/txtPlayfairDisplayromansemibold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_weight="1"
                android:text="@string/gender" />

            <Spinner
                android:id="@+id/genderField"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/gender_options" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/finishButton"
            android:layout_width="@dimen/_253pxh"
            android:layout_height="@dimen/_57pxv"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginBottom="@dimen/_20pxv">

            <View
                android:id="@+id/viewEllipseOne"
                android:layout_width="@dimen/_253pxh"
                android:layout_height="@dimen/_57pxv"
                android:layout_gravity="start"
                android:background="@drawable/background2" />

            <TextView
                android:id="@+id/txtSIGNUP"
                style="@style/txtPlayfairDisplayromansemibold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center"
                android:layout_marginStart="@dimen/_72pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_marginEnd="@dimen/_72pxh"
                android:layout_marginBottom="@dimen/_15pxv"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/metrics_continue"
                tools:text="@string/metrics_continue" />
        </FrameLayout>

    </LinearLayout>
</layout>
