<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryFragment">

    <TextView
        android:id="@+id/runningTitle"
        style="@style/txtPlayfairDisplayromanbold36"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50pxv"
        android:layout_marginTop="16dp"
        android:text="@string/summary_title"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapContainer"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/runningTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout="@android:layout/browser_link_context_header" />

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/_30pxh"
        android:gravity="left"
        android:text="@string/summary_distance"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/mapContainer"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/distanceTextEntry"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/distanceText"
        app:layout_constraintTop_toBottomOf="@id/mapContainer" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/_30pxh"
        android:gravity="left"
        android:text="@string/summary_time"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/distanceText"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/timeTextEntry"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/timeText"
        app:layout_constraintTop_toBottomOf="@id/distanceText" />

</androidx.constraintlayout.widget.ConstraintLayout>
